--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,11 @@
+
+<% content_for :head do %>
+  <script type="module">
+    import {subscription} from 'application'
+    window.subscription = subscription
+  </script>
+<% end %>
+
 <h1>All Posts</h1>
 
 <%= link_to 'New Post', new_post_path %>
